# beadloom

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  SECURITY.md  pyproject.toml
.beadloom/: AGENTS.md  README.md  ai_techwriter_runs.json  config.yml  flow.yml  metrics_history.json
.beadloom/_graph/: rules.yml  services.yml
.beads/: .gitignore  interactions.jsonl  issues.jsonl
.claude/: CLAUDE.md
.claude/agents/: dev.md  review.md  tech-writer.md  test.md
.claude/commands/: checkpoint.md  coordinator.md  dev.md  epic-init.md  review.md  task-init.md  tech-writer.md  templates.md  test.md
.claude/development/: BACKLOG.md  BDL-UX-Issues.md  PRD.md  REVIEW.md  RFC.md  ROADMAP.md  STRATEGY-2.md  STRATEGY-3.md  STRATEGY.md
.github/workflows/: ai-techwriter.yml  beadloom-aac-lint.yml  beadloom-gate.yml  ci.yml  deploy-site.yml  pypi-publish.yml  tests.yml
ci-templates/: action.yml  beadloom-sync.gitlab-ci.yml
docs/: architecture.md  ci-setup.md  cli-reference.md  getting-started.md  graph-format.md  mcp-server.md  sync-engine.md
docs/guides/: agentic-flow.md  ai-techwriter.md  architecture-model.md  ci-setup.md  multi-agent-development.md  multi-agent-development.ru.md  vitepress-site.md
docs/services/: beadloom.md  cli.md  mcp-server.md  mcp.md  tui.md
site/: architecture.md  dashboard.data.json  dashboard.md  index.md  landscape.md  package-lock.json  package.json
site/.vitepress/: config.generated.mjs  config.mjs
site/docs/: architecture.md  getting-started.md  index.md
site/domains/: ai_agents.md  application.md  context-oracle.md  doc-sync.md  graph.md  infrastructure.md  onboarding.md
site/features/: agent-prime.md  agentic-flow-setup.md  ai-techwriter-setup.md  ai-techwriter.md  branch-protection.md  c4-diagrams.md  cache.md  ci-gate.md  code-indexer.md  config-check.md  debt-report.md  doc-generator.md  docs-audit.md  (+17 more)
tests/: conftest.py  test_active_table.py  test_active_table_hardening.py  test_ai_techwriter_cli.py  test_ai_techwriter_hardening.py  test_ai_techwriter_harness.py  test_ai_techwriter_parallel.py  test_ai_techwriter_provider.py  test_ai_techwriter_seams.py  test_ai_techwriter_symbol_scope.py  test_amqp_body.py  test_amqp_body_determinism.py  test_amqp_body_federation.py  test_amqp_body_matrix.py  test_amqp_body_verdict.py  test_asyncapi_fidelity.py  test_asyncapi_ingest.py  test_atomic_io.py  test_atomic_io_call_sites.py  test_audit_ignore.py  test_auto_link_docs.py  test_bd_seam.py  test_bdl050_hardening.py  test_bead06_misc_fixes.py  test_bead15_s3b_coverage.py  test_bootstrap_clean_lint.py  test_branch_protection.py  test_c4.py  test_c_cpp_support.py  test_cache.py  test_ci_consolidated.py  test_ci_consolidated_structure.py  test_ci_gate.py  test_ci_pr_trigger.py  test_ci_workflow_cache.py  test_cli_active_sync.py  test_cli_active_sync_hardening.py  test_cli_config_check.py  test_cli_ctx.py  test_cli_diff.py  (+136 more)
tools/: __init__.py
(+665 files in other folders)
